--- a/index.html
+++ b/index.html
@@ -31,16 +31,34 @@
                 <h1>Krok po kroku a1, Junior</h1>
                 <h2>2</h2>
                 <ul class="list">
-                    <li class="liLesson"><a href="./lekcji/lesson1.html">A -  Co to jest? Kto to jest? <span class="red">zaimki: kto? co? - Kto to jest? Co to jest?</span></a><input type="checkbox" class="checkbox" ></li><hr>
-                    <li class="liLesson"><a href="./lekcji/lesson2B.html">B - Ten otówek czy tamten? <span class="red">podzial na rodzaje rzeczownika; zaimek: ten, ta, to; Kto to jest? Co to jest?</span></a><input type="checkbox" class="checkbox" ></li><hr>
-                    <li class="liLesson"><a href=".//lekcji/lesson2C.html">C - Czy to jest czerwone jabłko? Jaki jest twój.<span class="red"> mianownik I.poj.; zaimek: jaki? jaka? jakie?; Czy ot jest..?</span></a><input type="checkbox" class="checkbox" ></li><hr>
-                    <li class="liLesson"><a href="./lekcji/lesson2D.html">D -  Stare, nowe, kolorowe? <span class="red"> zgodnosé rzeczownika iem - cd.; opis przedmiotów 28 z przymiotnik; Co jest wtwoim plecaku?</span></a><input type="checkbox" class="checkbox" ></li><hr>
-                    <li class="liLesson"><a href="./lessonEnglish/lessonEnglish53.html">Plus - dia ambitnych <span class="red">utrwalenie wiadomosci; opisywanie zanych miejsc w Polsce</span></a><input type="checkbox" class="checkbox" ></li><hr>
+                    <li class="liLesson"><a href="./lekcji/lesson1.html">2 - A - Co to jest? Kto to jest? <span
+                                class="red">zaimki: kto? co? - Kto to jest? Co to jest?</span></a><input type="checkbox"
+                            class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href="./lekcji/lesson2B.html">2 - B - Ten otówek czy tamten? <span
+                                class="red">podzial na rodzaje rzeczownika; zaimek: ten, ta, to; Kto to jest? Co to
+                                jest?</span></a><input type="checkbox" class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href=".//lekcji/lesson2C.html">2 - C - Czy to jest czerwone jabłko? Jaki jest
+                            twój.<span class="red"> mianownik I.poj.; zaimek: jaki? jaka? jakie?; Czy ot
+                                jest..?</span></a><input type="checkbox" class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href="./lekcji/lesson2D.html">2 - D - Stare, nowe, kolorowe? <span class="red">
+                                zgodnosé rzeczownika iem - cd.; opis przedmiotów 28 z przymiotnik; Co jest wtwoim
+                                plecaku?</span></a><input type="checkbox" class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href="./lekcji/lesson2powtorzenie.html">2 - Powtórzenie </a><input type="checkbox"
+                            class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href="./lessonEnglish/lessonEnglish53.html">2 - Plus - dia ambitnych <span
+                                class="red">utrwalenie wiadomosci; opisywanie zanych miejsc w Polsce</span></a><input
+                            type="checkbox" class="checkbox"></li>
+                    <hr>
                 </ul>
             </div>
         </main>
     </div>
-    
+
 </body>
 
 </html>
