--- a/lekcji/lesson2B.html
+++ b/lekcji/lesson2B.html
@@ -221,7 +221,7 @@
                 <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2127131&authkey=%21AFyy3zUnn4-Zi-4&width=3972&height=602" alt="502B3">
             </div>
             <!-- 4 -->
-            <h2>4. On? Опа? Опо? 5(02B4|)</h2>
+            <h2>4. On? Оnа? Оnо? 5(02B4|)</h2>
             <div class="video">
                 <iframe style="max-width:100%" src="https://wordwall.net/pl/embed/b99c2ff6967e46d599c5762bb6987ad7?themeId=22&templateId=2&fontStackId=0" frameborder="0" allowfullscreen></iframe>
             </div>
