--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
                             type="checkbox" class="checkbox"></li>
                     <hr>
                 </ul>
+                <!-- 3 -->
+                <h2>3</h2>
+                <ul class="list">
+                    <li class="liLesson"><a href="./lekcji/lesson3A.html">3-A - Tydzien ma siedem dni <span
+                                class="red"> - zaimki dzierzawcze: mój, twój, jego, jej</span> <br>Jaki jest twój plan lekcji i ulubiony przedmiot?</a><input type="checkbox"
+                            class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href="./lekcji/lesson2B.html">3 - B - Lubie to!<span
+                                class="red">lubic + bezokolicznik</span> <br> Jakie jest twoje hobby? Co lubisz robié?</a><input type="checkbox" class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href=".//lekcji/lesson2C.html">3 - C - Mam talent <span class="red">  umie + bezokolicznik <br> koniugacja -m, s-z - powtórzenie</span> <br> Co umiesz robié?  Jak umiesz to robic?</a><input type="checkbox" class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href="./lekcji/lesson2D.html">3 - D - Czas na casting <span class="red">
+                        koniugacja e-, -isz/-ysz <br> mówic po...</span> <br>casting do wieczoru talentów</a><input type="checkbox" class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href="./lekcji/lesson2powtorzenie.html">3 - Powtórzenie </a><input type="checkbox"
+                            class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href="./lessonEnglish/lessonEnglish53.html">3 - Plus - dia ambitnych <span
+                                class="red">mówie po polsku/ znam polski/ ucze sie polskiego</span> <br> 
+                                Twój przyjaciel ijego 46 hobby. <br>mini-projekt „Wieczór talentów"</a><input
+                            type="checkbox" class="checkbox"></li>
+                    <hr>
+                </ul>
             </div>
         </main>
     </div>
