--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
                 <!-- 3 -->
                 <h2>3</h2>
                 <ul class="list">
-                    <li class="liLesson"><a href="./lekcji/lesson3A.html">3-A - Tydzien ma siedem dni <span
+                    <li class="liLesson"><a href="./lekcji/lesson3A.html">3-A - Tydzień ma siedem dni <span
                                 class="red"> - zaimki dzierzawcze: mój, twój, jego, jej</span> <br>Jaki jest twój plan lekcji i ulubiony przedmiot?</a><input type="checkbox"
                             class="checkbox"></li>
                     <hr>
-                    <li class="liLesson"><a href="./lekcji/lesson2B.html">3 - B - Lubie to!<span
-                                class="red">lubic + bezokolicznik</span> <br> Jakie jest twoje hobby? Co lubisz robié?</a><input type="checkbox" class="checkbox"></li>
+                    <li class="liLesson"><a href="./lekcji/lesson3B.html">3 - B - Lubię to!<span
+                                class="red">lubic + bezokolicznik</span> <br> Jakie jest twoje hobby? Co lubisz robić?</a><input type="checkbox" class="checkbox"></li>
                     <hr>
-                    <li class="liLesson"><a href=".//lekcji/lesson2C.html">3 - C - Mam talent <span class="red">  umie + bezokolicznik <br> koniugacja -m, s-z - powtórzenie</span> <br> Co umiesz robié?  Jak umiesz to robic?</a><input type="checkbox" class="checkbox"></li>
+                    <li class="liLesson"><a href=".//lekcji/lesson3C.html">3 - C - Mam talent <span class="red">  umie + bezokolicznik <br> koniugacja -m, s-z - powtórzenie</span> <br> Co umiesz robić?  Jak umiesz to robić?</a><input type="checkbox" class="checkbox"></li>
                     <hr>
                     <li class="liLesson"><a href="./lekcji/lesson2D.html">3 - D - Czas na casting <span class="red">
                         koniugacja e-, -isz/-ysz <br> mówic po...</span> <br>casting do wieczoru talentów</a><input type="checkbox" class="checkbox"></li>
