--- a/lekcji/lesson3D.html
+++ b/lekcji/lesson3D.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson №3C</title>
+    <title>Lesson №3D</title>
     <link rel="stylesheet" href="../style.css">
 
 </head>
@@ -18,26 +18,227 @@
         </header>
         <main class="main">
             <h1>Krok po kroku - junior 1 <br> 3</h1>
-            <h2>C - Mam talent </h2>
-            <h3>umie + bezokolicznik <br> koniugacja -m, s-z - powtórzenie<br> Co umiesz robić? <br> Jak umiesz to
-                robić?</h3>
+            <h2>D - Czas na casting </h2>
+            <h3> koniugacja e-, -isz/-ysz <br> mówic po... <br> casting do wieczoru talentów</h3>
             <!-- 1-2 -->
             <div class="two">
-                <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131047&authkey=%21AHdnME2nkkI9fcM&width=1258&height=1496"
-                    alt="503C1">
+                <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131063&authkey=%21ADOXJjJScdPdfK0&width=1512&height=610" alt="503D2" style="width: 60%;">
                     <div class="question-set" id="set1">
                         <div class="dialog italic ">
+                            <h2>3. Proszę posłuchać i uzupełnić. </h2>
                             <div class="colors">
-                                <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131048&authkey=%21AIMk_OsHr5MD4ro&width=1346&height=320" alt="503C2">
+                                <div><audio src="./audio/065.mp3" controls>065</audio></div>
+                            </div>
+                            <div class="colors"><p class="p">robię | tanczę | liczę | uczę się | chodzę | mówisz | uczysz się </p></div>
+                            <div class="colors">
+                                <p ><span class="italic blue">MAJA: </span> Olivia, musimy zaplanować dobry termin na casting do wieczoru talentów. Kiedy masz czas? Może w poniedziałek?</p>
                             </div>
                             <div class="colors">
-                                <p class="p">Ta dziewczyna to Maja, a tamten chłopak to Adam. Oni <span class="italic blue">nazywają się</span> Zielińscy.<input type="text" data-answer="Są" class="line_1"> z Polski i <input type="text" data-answer="mieszkają" class="line_1"> w Krakowie. Dobrze <input type="text" data-answer="grają" class="line_1"> w tenisa. Bardzo dobrze <input type="text" data-answer="rozumieją" class="line_1"> angelski. Maja <input type="text" data-answer="lubi" class="line_1"> pisać wiersze, a Adam <input type="text" data-answer="lubi" class="line_1"> grać w piłkię nożną. Ich najlepszy kolega i najlepsza koleżanka  <input type="text" data-answer="mają" class="line_1"> na imię Olivia i Lukas. Oni tylko trochę <input type="text" data-answer="rozumieją" class="line_1"> język polski.</p>
+                                <p><span class="blue">OLIVIA: </span>W poniedziałek nie mogę, bo mam lekcję niemieckiego.</p>
+                            </div>
+                            <div class="colors">
+                                <p ><span class="blue">MAJA: </span>O! <span class="blue"> Uczysz się</span> niemieckiego w Polsce?</p>
+                            </div>
+                            <div class="colors">
+                                <p ><span class="blue">OLIVIA: </span> Tak, w Krakowie <input type="text" data-answer="uczę się" class="line_1"> polskiego i niemieckiego. Chodzę na kurs do szkoły językowej.</p>
+                            </div>
+                            <div class="colors">
+                                <p ><span class="blue">MAJA: </span>A co robisz we wtorek?</p>
+                            </div>
+                            <div class="colors">
+                                <p ><span class="blue">OLIVIA: </span> Nie <input type="text" data-answer="robię" class="line_1"> nic specjalnego.</p>
+                            </div>
+                            <div class="colors">
+                                <p ><span class="blue">MAJA: </span>Ojej, ale we wtorek to ja nie mam czasu. <input type="text" data-answer="chodzę" class="line_1"> na korepetycje z matematyki. Uczę się do sprawdzianu. To może środa?</p>
+                            </div>
+                            <div class="colors">
+                                <p ><span class="blue">OLIVIA: </span> W środę i piątek  <input type="text" data-answer="tanczę" class="line_1">. Mam kurs salsy.</p>
+                            </div>
+                            <div class="colors">
+                                <p ><span class="blue">MAJA: </span>Hmm, <input type="text" data-answer="mówisz" class="line_1">, że w poniedziałek jesteś zajęta, w środę i piątek też nie możesz... To może czwartek? Masz plany na czwartek?</p>
+                            </div>
+                            <div class="colors">
+                                <p ><span class="blue">OLIVIA: </span> Nie mam. Jestem wolna.</p>
+                            </div>
+                            <div class="colors">
+                                <p ><span class="blue">MAJA: </span>Super! W takiej sytuacji casting jest w czwartek.</p>
+                            </div>
+                            <div class="colors">
+                                <p ><span class="blue">OLIVIA: </span> Już <input type="text" data-answer="liczę" class="line_1">dni!</p>
                             </div>
                         </div>
                         <button onclick="checkAnswers('set1')">Check</button>
                     </div>
             </div>
-
+            <!-- 6 -->
+             <h2>6. Proszę uzupiełnić. [503D6]</h2>
+             <h3>KONIUGACJA -e, -isz</h3>
+             <h4>Po b, p, w, ,f m, n mamy ekstra wformach ja i oni/one.</h4>
+             <div class="three" style="width: 100%;">
+                <!-- 6.1 -->
+                <div class="question-set" id="set2" style="width: 100%;">
+                    <div class="dialog italic " >
+                        <h3 class="coral">chodzić</h3>
+                        <div class="colors">
+                            <p class="p italic ">(ja) chodz<span class="coral">ę</span></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p">(ty) chodz<span class="coral">isz</span></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (on/ ona/ ono) chodz<span class="coral">i</span></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (my) chodz<span class="coral">imy</span></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (wy) chodz<span class="coral">icie</span></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (oni/ one) chodz<span class="coral">ą</span></p>
+                        </div>
+                    </div>
+                    <br>
+                    <h4 class="coral">chodzić na lekcje, do szkoły, <br> na kurs, do klubu</h4>
+                </div>
+                <!-- 6.2 -->
+                <div class="question-set" id="set3" style="width: 100%;">
+                    <div class="dialog italic " >
+                        <h3 class="coral">mówić</h3>
+                        <div class="colors">
+                            <p class="p italic ">(ja) mów<wspan class="coral">ię</wspan></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p">(ty) <input type="text" data-answer="mówisz" class="line_1"> </p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (on/ ona/ ono) <input type="text" data-answer="mówi" class="line_1"></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (my) <input type="text" data-answer="mówimy" class="line_1"></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (wy) <input type="text" data-answer="mówicie" class="line_1"></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (oni/ one) <input type="text" data-answer="mówią" class="line_1"></p>
+                        </div>
+                    </div>
+                    <br>
+                    <h4 class="coral">mówić po polsku, <br> po angelsku, po rosyjsku</h4>
+                    <button onclick="checkAnswers('set3')">Check</button>
+                </div>
+                <!-- 6.3 -->
+                <div class="question-set" id="set4" style="width: 100%;">
+                    <div class="dialog italic " >
+                        <h3 class="coral">robić</h3>
+                        <div class="colors">
+                            <p class="p italic ">(ja) rob<span class="coral">ię</span></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p">(ty) <input type="text" data-answer="robisz" class="line_1"> </p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (on/ ona/ ono) <input type="text" data-answer="robi" class="line_1"></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (my) <input type="text" data-answer="robimy" class="line_1"></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (wy) <input type="text" data-answer="robicie" class="line_1"></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (oni/ one) <input type="text" data-answer="robią" class="line_1"></p>
+                        </div>
+                    </div>
+                    <br>
+                    <h4 class="coral">robić coś fajnego, <br> coś nowego, nic nie robić</h4>
+                    <button onclick="checkAnswers('set4')">Check</button>
+                </div>
+             </div>
+             <h3>KONIUGACJA -e, -ysz</h3>
+             
+             <div class="three" style="width: 100%;">
+                <!-- 6.4 -->
+                <div class="question-set" style="width: 100%;">
+                    <div class="dialog italic " >
+                        <h3 class="coral">chodzić</h3>
+                        <div class="colors">
+                            <p class="p italic ">(ja) uczy<span class="coral">ę</span> się</p>
+                        </div>
+                        <div class="colors">
+                            <p class="p">(ty) uczy<span class="coral">ysz</span> się</p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (on/ ona/ ono) uczy<span class="coral">y</span> się</p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (my) uczy<span class="coral">ymy</span> się</p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (wy) uczy<span class="coral">ycie</span> się</p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (oni/ one) ucz<span class="coral">ą</span> się</p>
+                        </div>
+                    </div>
+                    <br>
+                    <h4 class="coral">uczyć się polskiego, <br> angielskiego, matematyki</h4>
+                </div>
+                <!-- 6.5 -->
+                <div class="question-set" id="set5" style="width: 100%;">
+                    <div class="dialog italic " >
+                        <h3 class="coral">tańczyć</h3>
+                        <div class="colors">
+                            <p class="p italic ">(ja) tańcz<wspan class="coral">ę</wspan></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p">(ty) <input type="text" data-answer="tańczysz" class="line_1"> </p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (on/ ona/ ono) <input type="text" data-answer="tańczy" class="line_1"></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (my) <input type="text" data-answer="tańczymy" class="line_1"></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (wy) <input type="text" data-answer="tańczycie" class="line_1"></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (oni/ one) <input type="text" data-answer="tańczą" class="line_1"></p>
+                        </div>
+                    </div><br>
+                    <h4 class="coral">tańczyć hip-hop, <br> salsę, kujawiaka</h4>
+                    <button onclick="checkAnswers('set5')">Check</button>
+                </div>
+                <!-- 6.6 -->
+                <div class="question-set" id="set6" style="width: 100%;">
+                    <div class="dialog italic " >
+                        <h3 class="coral">liczyć</h3>
+                        <div class="colors">
+                            <p class="p italic ">(ja) licz<span class="coral">ę</span></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p">(ty) <input type="text" data-answer="liczysz" class="line_1"> </p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (on/ ona/ ono) <input type="text" data-answer="liczy" class="line_1"></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (my) <input type="text" data-answer="liczymy" class="line_1"></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (wy) <input type="text" data-answer="liczycie" class="line_1"></p>
+                        </div>
+                        <div class="colors">
+                            <p class="p"> (oni/ one) <input type="text" data-answer="liczą" class="line_1"></p>
+                        </div>
+                    </div>
+                    <br>
+                    <h4 class="coral">liczyć dni, <br> kolegów, pieniądze</h4>
+                    <button onclick="checkAnswers('set6')">Check</button>
+                </div>
+             </div>
             <!-- 3 -->
             <h2>3. Proszę przeczytać dialog. [503C3]</h2>
             <div class="image">
