--- a/index.html
+++ b/index.html
@@ -14,17 +14,6 @@
             <ul class="ulhead">
                 <li class="li"><a href="#">Home</a></li>
             </ul>
-            <!-- <ul class="ulhead">
-                <li class="li"><a href="./matematyka/indexMatemat.html">Математика</a></li>
-                <li class="li"><a href="./ukrMova/movaHome.html">Укр.мова</a></li>
-                <li class="li"><a href="./czytanie/chytaniaHome.html">Читання</a></li>
-                <li class="li"><a href="./jds/jdsHome.html">ЯДС</a></li>
-                <li class="li"><a href="./Informatyka/informatykaHome.html">Інформатика</a></li>
-                <li class="li"><a href="./english/englishHome.html">English</a></li>
-                <li class="li"><a href="./Mystectwo/mystecHome.html">Мистецтво</a></li>
-                <li class="li"><a href="./finansy/finansyHome.html">Фінансова грамотність</a></li>
-            </ul> -->
-
         </header>
         <main class="main">
             <div>
@@ -70,12 +59,35 @@
                     <li class="liLesson"><a href="./lekcji/lesson3D.html">3 - D - Czas na casting <span class="red">
                         koniugacja e-, -isz/-ysz <br> mówic po...</span> <br>casting do wieczoru talentów</a><input type="checkbox" class="checkbox"></li>
                     <hr>
-                    <li class="liLesson"><a href="./lekcji/lesson2powtorzenie.html">3 - Powtórzenie </a><input type="checkbox"
+                    <li class="liLesson"><a href="./lekcji/lesson3Powtorzenie.html">3 - Powtórzenie </a><input type="checkbox"
                             class="checkbox"></li>
                     <hr>
-                    <li class="liLesson"><a href="./lessonEnglish/lessonEnglish53.html">3 - Plus - dia ambitnych <span
-                                class="red">mówie po polsku/ znam polski/ ucze sie polskiego</span> <br> 
-                                Twój przyjaciel ijego 46 hobby. <br>mini-projekt „Wieczór talentów"</a><input
+                    <li class="liLesson"><a href="./lekcji/lesson3+.html">3 - Plus - dia ambitnych <span class="red">mówie po polsku/ znam polski/ ucze sie polskiego</span> <br>  Twój przyjaciel i jego 46 hobby. <br>mini-projekt „Wieczór talentów"</a><input
+                            type="checkbox" class="checkbox"></li>
+                    <hr>
+                </ul>
+                <!-- 4 -->
+                <h2>4</h2>
+                <ul class="list">
+                    <li class="liLesson"><a href="./lekcji/lesson4A.html">4-A - Jaki jestes? <span
+                                class="red"> - zgodność rzeczownika i przymiotnika (utrwalenie)</span> <br>Jaki jestes? / 
+                                opis siebie i innych / 
+                                wyrażanie opinii</a><input type="checkbox"
+                            class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href="./lekcji/lesson3B.html">4 - B - Czyje to jest?<span
+                                class="red">zaimki dzierżawcze - zebranie</span> <br> 
+                                Czyje ot jest? / mail</a><input type="checkbox" class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href=".//lekcji/lesson3C.html">4 - C - Kim jesteś? <span class="red">  narzednik l.poj.</span> <br> 
+                        Kim jesteś? / Czym się interesujesz?</a><input type="checkbox" class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href="./lekcji/lesson3D.html">4 - D - Kim chcesz zostać? <span class="red">narzednik I.poj. - cd.</span> <br>Kim chcesz zostać?</a><input type="checkbox" class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href="./lekcji/lesson3Powtorzenie.html">4 - Powtórzenie </a><input type="checkbox"
+                            class="checkbox"></li>
+                    <hr>
+                    <li class="liLesson"><a href="./lekcji/lesson3+.html">4 - Plus - dia ambitnych <span class="red"> utrwalenie wiadomości</span> <br> Twój ulubiony bohater / celebryta.</a><input
                             type="checkbox" class="checkbox"></li>
                     <hr>
                 </ul>
