--- a/lekcji/lesson2B.html
+++ b/lekcji/lesson2B.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson №2B</title>
     <link rel="stylesheet" href="../style.css">
-    <style>
+    <!-- <style>
         .correct {
             background-color: green;
             color: white;
@@ -48,7 +48,7 @@
             text-align: center;
             /* Текст по центру */
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
@@ -62,6 +62,12 @@
             <h1>Krok po kroku - junior 1 - 2</h1>
             <h2>B - Ten ołówek czy tamten?</h2>
             <h3>rzeczownik: podział na radzaje <br> ten,ta,to</h3>
+            <!-- nowy słowa-->
+            <a href="https://quizlet.com/pl/934713689/krok-po-kroku-junior-1-2b-flash-cards/?i=4wzil5&x=1qqt"
+                target="_blank">NOWY SŁOWA >>></a>
+            <div class="video">
+                <iframe src="https://quizlet.com/934713689/match/embed?i=4wzil5&x=1jj1" height="500" width="100%" style="border:0"></iframe>
+            </div>
             <!-- 1 -->
             <h2>Prosze uzupetnic.</h2>
             <div class="video">
