--- a/lekcji/lesson2C.html
+++ b/lekcji/lesson2C.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson №2C</title>
     <link rel="stylesheet" href="../style.css">
-    <style>
+    <!-- <style>
         .correct {
             background-color: green;
             color: white;
@@ -84,7 +84,7 @@
             height: 35px;
             background-color: orange;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
@@ -98,6 +98,12 @@
             <h1>Krok po kroku - junior 1 - 2</h1>
             <h2>С - Czy to jest czerwone jabłko?</h2>
             <h3>kolory; Czy to jest ...?; jaki? jaka? jake?</h3>
+            <!-- nowy słowa-->
+            <a href="https://quizlet.com/pl/934715228/krok-po-kroku-junior-1-2c-flash-cards/?i=4wzil5&x=1jqt"
+                target="_blank">NOWY SŁOWA >>></a>
+            <div class="video">
+                <iframe src="https://quizlet.com/934715228/match/embed?i=4wzil5&x=1jj1" height="500" width="100%" style="border:0"></iframe>
+            </div>
             <!-- 1 -->
             <h2>Dialog 1</h2>
             <!-- 1 - 2-->
