--- a/lekcji/lesson3A.html
+++ b/lekcji/lesson3A.html
@@ -20,6 +20,12 @@
             <h1>Krok po kroku - junior 1 <br> 3</h1>
             <h2>A - Tydzien ma siedem dni. </h2>
             <h3>zaimki dzierzawcze: mój, twój, jego, jej<br> Jaki jest twój plan lekcji i ulubiony przedmiot?</h3>
+            <!-- nowy słowa-->
+            <a href="https://quizlet.com/pl/934723846/krok-po-kroku-junior-1-3a-flash-cards/?i=4wzil5&x=1jqt"
+                target="_blank">NOWY SŁOWA >>></a>
+            <div class="video">
+                <iframe src="https://quizlet.com/934723846/match/embed?i=4wzil5&x=1jj1" height="500" width="100%" style="border:0"></iframe>
+            </div>
             <!-- 1 -->
             <h2>1. Prosze podpisać zeszyty. [503A1]</h2>
             <h3>503A1</h3>
