--- a/lekcji/lesson3D.html
+++ b/lekcji/lesson3D.html
@@ -20,6 +20,12 @@
             <h1>Krok po kroku - junior 1 <br> 3</h1>
             <h2>D - Czas na casting </h2>
             <h3> koniugacja e-, -isz/-ysz <br> mówic po... <br> casting do wieczoru talentów</h3>
+            <!-- nowy słowa-->
+            <a href="https://quizlet.com/pl/934873947/krok-po-kroku-junior-1-3d-flash-cards/?i=4wzil5&x=1jqt"
+                target="_blank">NOWY SŁOWA >>></a>
+            <div class="video">
+                <iframe src="https://quizlet.com/934873947/match/embed?i=4wzil5&x=1jj1" height="500" width="100%" style="border:0"></iframe>
+            </div>
             <!-- 1-2 -->
             <div class="two">
                 <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131063&authkey=%21ADOXJjJScdPdfK0&width=1512&height=610"
