--- a/lekcji/lesson3+.html
+++ b/lekcji/lesson3+.html
@@ -19,6 +19,12 @@
         <main class="main">
             <h1>Krok po kroku - junior 1 <br> 3</h1>
             <h2>Plus dla ambitnych</h2>
+            <!-- nowy słowa-->
+            <a href="https://quizlet.com/pl/934876016/krok-po-kroku-junior-1-3-flash-cards/?i=4wzil5&x=1jqt"
+                target="_blank">NOWY SŁOWA >>></a>
+            <div class="video">
+                <iframe src="https://quizlet.com/934876016/match/embed?i=4wzil5&x=1jj1" height="500" width="100%" style="border:0"></iframe>
+            </div>
             <!-- 1-2 -->
             <div class="image" style="position: relative;">
                 <audio src="./audio/068_t57_2.mp3" controls style="position: absolute;left: 73%;top: 9%;width: 15%;">067</audio>
