--- a/lekcji/lesson3B.html
+++ b/lekcji/lesson3B.html
@@ -20,6 +20,12 @@
             <h1>Krok po kroku - junior 1 <br> 3</h1>
             <h2>B - Lubię to! </h2>
             <h3>lubić + bezokolicznik<br> Jakie jest twoje hobby? <br>Co lubisz robić?</h3>
+            <!-- nowy słowa-->
+            <a href="https://quizlet.com/pl/934727728/krok-po-kroku-junior-1-3b-flash-cards/?i=4wzil5&x=1jqt"
+                target="_blank">NOWY SŁOWA >>></a>
+            <div class="video">
+                <iframe src="https://quizlet.com/934727728/match/embed?i=4wzil5&x=1jj1" height="500" width="100%" style="border:0"></iframe>
+            </div>
             <!-- 1 -->
             <h2>1. Prosze podpisać zeszyty. [503A1]</h2>
             <h3>503B1</h3>
