--- a/lekcji/lesson4Powtorzenie.html
+++ b/lekcji/lesson4Powtorzenie.html
@@ -157,31 +157,40 @@
                 <div class="question-set" id="set2">
                     <div class="dialog italic ">
                         <div class="colors">
-                            <p class="italic" style="font-size: 22px;"><span class="blue">1. To jest jego zeszyt.</span></p>
+                            <p class="italic" style="font-size: 22px;"><span class="blue">1. To jest jego zeszyt.</span>
+                            </p>
                         </div>
                         <div class="colors">
-                            <p style="font-size: 22px;">2. <input type="text" data-answer="To jest moja piłka" class="line_3">.</p>
+                            <p style="font-size: 22px;">2. <input type="text" data-answer="To jest moja piłka"
+                                    class="line_3">.</p>
                         </div>
                         <div class="colors">
-                            <p style="font-size: 22px;">3. <input type="text" data-answer="To jest jej rower" class="line_3">.</p>
+                            <p style="font-size: 22px;">3. <input type="text" data-answer="To jest jej rower"
+                                    class="line_3">.</p>
                         </div>
                         <div class="colors">
-                            <p style="font-size: 22px;">4. <input type="text" data-answer="To jest wasz tablet" class="line_3">.</p>
+                            <p style="font-size: 22px;">4. <input type="text" data-answer="To jest wasz tablet"
+                                    class="line_3">.</p>
                         </div>
                         <div class="colors">
-                            <p style="font-size: 22px;">5. <input type="text" data-answer="To jest ich akwarium" class="line_3">.</p>
+                            <p style="font-size: 22px;">5. <input type="text" data-answer="To jest ich akwarium"
+                                    class="line_3">.</p>
                         </div>
                         <div class="colors">
-                            <p style="font-size: 22px;">6. <input type="text" data-answer="To jest ich deskorolka" class="line_3">.</p>
+                            <p style="font-size: 22px;">6. <input type="text" data-answer="To jest ich deskorolka"
+                                    class="line_3">.</p>
                         </div>
                         <div class="colors">
-                            <p style="font-size: 22px;">7. <input type="text" data-answer="To jest nasza nauczycielka" class="line_3">.</p>
+                            <p style="font-size: 22px;">7. <input type="text" data-answer="To jest nasza nauczycielka"
+                                    class="line_3">.</p>
                         </div>
                         <div class="colors">
-                            <p style="font-size: 22px;">8. <input type="text" data-answer="To jest twój smartfon" class="line_3">.</p>
+                            <p style="font-size: 22px;">8. <input type="text" data-answer="To jest twój smartfon"
+                                    class="line_3">.</p>
                         </div>
                         <div class="colors">
-                            <p style="font-size: 22px;">9. <input type="text" data-answer="To jest ich książka" class="line_3">.</p>
+                            <p style="font-size: 22px;">9. <input type="text" data-answer="To jest ich książka"
+                                    class="line_3">.</p>
                         </div>
                     </div>
                     <button onclick="checkAnswers('set2')">Check</button>
@@ -206,30 +215,37 @@
             <!-- 7 -->
             <h2>7. Transformacje: mianownik => narzędnik. [504P7]</h2>
 
-            <div class="three" style="width: 100%;">
+            <div style="width: 100%;">
                 <!-- 8.1 -->
                 <div class="question-set" id="set3" style="width: 100%;">
                     <div class="dialog italic ">
                         <div class="colors">
-                            <p class="p italic ">1. Bartek to zdolny uczeń. => <span class="blue">Bartek jest zdolnym uczniem</span>.</p>
+                            <p class="p italic ">1. Bartek to zdolny uczeń. => <span class="blue">Bartek jest zdolnym
+                                    uczniem</span>.</p>
                         </div>
                         <div class="colors">
-                            <p class="p">2. Olivia to dobra przyjaciółka. =>  <input type="text" data-answer="Olivia jest dobrą przyjaciółką" class="line_3">.</p>
+                            <p class="p">2. Olivia to dobra przyjaciółka. => <input type="text"
+                                    data-answer="Olivia jest dobrą przyjaciółką" class="line_3">.</p>
                         </div>
                         <div class="colors">
-                            <p class="p">3. Maciek to niski chłopak. => <input type="text" data-answer="Maciek jest niskim chłopakiem" class="line_3">.</p>
+                            <p class="p">3. Maciek to niski chłopak. => <input type="text"
+                                    data-answer="Maciek jest niskim chłopakiem" class="line_3">.</p>
                         </div>
                         <div class="colors">
-                            <p class="p">4. Martyna to wesoła dziewczyna. => <input type="text" data-answer="Martyna jest wesołą dziewczyną" class="line_3">.</p>
+                            <p class="p">4. Martyna to wesoła dziewczyna. => <input type="text"
+                                    data-answer="Martyna jest wesołą dziewczyną" class="line_3">.</p>
                         </div>
                         <div class="colors">
-                            <p class="p">5. Sylwia to inteligentna uczennica. => <input type="text" data-answer="umiecie" class="line_3">.</p>
+                            <p class="p">5. Sylwia to inteligentna uczennica. => <input type="text"
+                                    data-answer="umiecie" class="line_3">.</p>
                         </div>
                         <div class="colors">
-                            <p class="p">6. Iwona to wysportowana studentka. => <input type="text" data-answer="Iwona jest wysportowaną studentką." class="line_3">.</p>
+                            <p class="p">6. Iwona to wysportowana studentka. => <input type="text"
+                                    data-answer="Iwona jest wysportowaną studentką." class="line_3">.</p>
                         </div>
                         <div class="colors">
-                            <p class="p">7. Mateusz to energiczne dziecko. => <input type="text" data-answer="Mateusz jest energicznym dzieckiem" class="line_3">.</p>
+                            <p class="p">7. Mateusz to energiczne dziecko. => <input type="text"
+                                    data-answer="Mateusz jest energicznym dzieckiem" class="line_3">.</p>
                         </div>
                     </div>
                     <button onclick="checkAnswers('set3')">Check</button>
@@ -246,9 +262,113 @@
                         </ul>
                     </div>
                 </div>
-                
-            <!-- 10 -->
-        </main>    
+                <!-- 8 -->
+                <div class="two">
+                    <div class="raspisanie" style="width: 70%;">
+                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131129&authkey=%21AIID_OjPD6d6qqI&width=612&height=716"
+                            alt="504P8-1 " style="width: 60%;">
+                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131130&authkey=%21AEkqgCDttyuYLIY&width=1028&height=992"
+                            alt="504P8-2">
+                    </div>
+                    <div class="question-set" id="set4">
+                        <div class="dialog italic ">
+                            <div class="colors">
+                                <p class="p italic ">1. <span class="blue">Ja interesuję się muzyką.</span></p>
+                            </div>
+                            <div class="colors">
+                                <p style="font-size: 22px;">2. <input type="text"
+                                        data-answer="One interesują się sportem" class="line_3">.</p>
+                            </div>
+                            <div class="colors">
+                                <p style="font-size: 22px;">3. <input type="text"
+                                        data-answer="My interesujemy się przyrodą" class="line_3">.</p>
+                            </div>
+                            <div class="colors">
+                                <p style="font-size: 22px;">4. <input type="text"
+                                        data-answer="Oni interesują się informatyką" class="line_3">.</p>
+                            </div>
+                            <div class="colors">
+                                <p style="font-size: 22px;">5. <input type="text"
+                                        data-answer="One interesują się teatrem" class="line_3">.</p>
+                            </div>
+                            <div class="colors">
+                                <p style="font-size: 22px;">6. <input type="text"
+                                        data-answer="Ty interesujesz się sztuką" class="line_3">.</p>
+                            </div>
+                            <div class="colors">
+                                <p style="font-size: 22px;">7. <input type="text"
+                                        data-answer="Ona interesuje się książkami" class="line_3">.</p>
+                            </div>
+                            <div class="colors">
+                                <p style="font-size: 22px;">8. <input type="text" data-answer="Ja interesuję się modą"
+                                        class="line_3">.</p>
+                            </div>
+                        </div>
+                        <button onclick="checkAnswers('set4')">Check</button>
+                        <button onclick="toggleHints('hints4')">Wskazówka</button>
+                        <div id="hints4" style="display: none;">
+                            <ul>
+                                <li>1. Ja interesuję się muzyką.</li>
+                                <li>2. One interesują się sportem.</li>
+                                <li>3. My interesujemy się przyrodą.</li>
+                                <li>4. Oni interesują się informatyką.</li>
+                                <li>5. One interesują się teatrem.</li>
+                                <li>6. Ty interesujesz się sztuką.</li>
+                                <li>7. Ona interesuje się książkami.</li>
+                                <li>8. Ja interesuję się modą.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 9 -->
+                <h2>9. Proszę skorygować. [504P9]</h2>
+                <div class="question-set" id="set5">
+                    <div class="dialog italic ">
+                        <div class="colors">
+                            <p class="p italic ">1. Misaki to ambitną studentka. => <span class="blue">Misaki to ambitna
+                                    studentka</span>.</p>
+                        </div>
+                        <div class="colors">
+                            <p class="p">2. Denis jest wysoki chłopakiem => <input type="text"
+                                    data-answer="Denis jest wysokim chłopakiem" class="line_3">.</p>
+                        </div>
+                        <div class="colors">
+                            <p class="p">3. Agnieszka jest miła sekretarką. => <input type="text"
+                                    data-answer="Agnieszka jest miłą sekretarką" class="line_3">.</p>
+                        </div>
+                        <div class="colors">
+                            <p class="p">4. Hania to wesołym dziecko. => <input type="text"
+                                    data-answer="Hania to wesołe dziecko" class="line_3">.</p>
+                        </div>
+                        <div class="colors">
+                            <p class="p">5. Maja jest ładna dziewczyną. => <input type="text"
+                                    data-answer="Maja jest ładną dziewczyną" class="line_3">.</p>
+                        </div>
+                        <div class="colors">
+                            <p class="p">6. Arek jest dobry kolegą. => <input type="text"
+                                    data-answer="Arek jest dobrym kolegą" class="line_3">.</p>
+                        </div>
+                        <div class="colors">
+                            <p class="p">7. Paulina to kreatywną nauczycielka. => <input type="text"
+                                    data-answer="Paulina to kreatywna nauczycielka" class="line_3">.</p>
+                        </div>
+                    </div>
+                    <button onclick="checkAnswers('set5')">Check</button>
+                    <button onclick="toggleHints('hints5')">Wskazówka</button>
+                    <div id="hints5" style="display: none;">
+                        <ul>
+                            <li>1. Misaki to ambitną studentka. => Misaki to ambitna studentka. </li>
+                            <li>2. Denis jest wysoki chłopakiem => Denis jest wysokim chłopakiem.</li>
+                            <li>3. Agnieszka jest miła sekretarką. => Agnieszka jest miłą sekretarką. </li>
+                            <li>4. Hania to wesołym dziecko. => Hania to wesołe dziecko. </li>
+                            <li>5. Maja jest ładna dziewczyną. => Maja jest ładną dziewczyną.</li>
+                            <li>6. Arek jest dobry kolegą. => Arek jest dobrym kolegą.</li>
+                            <li>7. Paulina to kreatywną nauczycielka. => Paulina to kreatywna nauczycielka.</li>
+                        </ul>
+                    </div>
+                </div>
+        </main>
     </div>
 
     <!-- script -->
