--- a/index.html
+++ b/index.html
@@ -91,6 +91,28 @@
                             type="checkbox" class="checkbox"></li>
                     <hr>
                 </ul>
+                 <!-- 5 -->
+                 <h2>5</h2>
+                 <ul class="list">
+                     <li class="liLesson"><a href="./lekcji/lesson5A.html">5-A - Moja rodzina. <span
+                                 class="red"> - powtórzenie pytań</span> <br>opys rodziny</a><input type="checkbox"
+                             class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson4B.html">5 - Ile masz lat?<span
+                                 class="red">Ile masz lat?</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href=".//lekcji/lesson4C.html">5 - C Co chcesz robić w weekend?<span class="red">  koniugaja -e, -esz</span> <br> 
+                        Co robisz w wolnym czasie?</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson4D.html">5 - D - Jak czesto grasz wpitke? <span class="red">utrwalenie koniugacji czasowniki: umieć, chcieć, móc, musieć</span> <br>Jak często to robisz?</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson4Powtorzenie.html">5 - Powtórzenie </a><input type="checkbox"
+                             class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson4+.html">5 - Plus - dia ambitnych <span class="red"> utrwalenie wiadomości</span> <br> Co robimy pod czas meczu? </a><input
+                             type="checkbox" class="checkbox"></li>
+                     <hr>
+                 </ul>
             </div>
         </main>
     </div>
