--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
                                  class="red"> - powtórzenie pytań</span> <br>opys rodziny</a><input type="checkbox"
                              class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href="./lekcji/lesson4B.html">5 - Ile masz lat?<span
+                     <li class="liLesson"><a href="./lekcji/lesson5B.html">5-B - Ile masz lat?<span
                                  class="red">Ile masz lat?</a><input type="checkbox" class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href=".//lekcji/lesson4C.html">5 - C Co chcesz robić w weekend?<span class="red">  koniugaja -e, -esz</span> <br> 
+                     <li class="liLesson"><a href=".//lekcji/lesson5C.html">5C - Co chcesz robić w weekend?<span class="red">  koniugaja -e, -esz</span> <br> 
                         Co robisz w wolnym czasie?</a><input type="checkbox" class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href="./lekcji/lesson4D.html">5 - D - Jak czesto grasz wpitke? <span class="red">utrwalenie koniugacji czasowniki: umieć, chcieć, móc, musieć</span> <br>Jak często to robisz?</a><input type="checkbox" class="checkbox"></li>
+                     <li class="liLesson"><a href="./lekcji/lesson5D.html">5D - Jak czesto grasz wpitke? <span class="red">utrwalenie koniugacji czasowniki: umieć, chcieć, móc, musieć</span> <br>Jak często to robisz?</a><input type="checkbox" class="checkbox"></li>
                      <hr>
                      <li class="liLesson"><a href="./lekcji/lesson4Powtorzenie.html">5 - Powtórzenie </a><input type="checkbox"
                              class="checkbox"></li>
