--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                      <hr>
                      <li class="liLesson"><a href="./lekcji/lesson5D.html">5D - Jak czesto grasz wpitke? <span class="red">utrwalenie koniugacji czasowniki: umieć, chcieć, móc, musieć</span> <br>Jak często to robisz?</a><input type="checkbox" class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href="./lekcji/lesson4Powtorzenie.html">5 - Powtórzenie </a><input type="checkbox"
+                     <li class="liLesson"><a href="./lekcji/lesson5Powtorzenie.html">5 - Powtórzenie </a><input type="checkbox"
                              class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href="./lekcji/lesson4+.html">5 - Plus - dia ambitnych <span class="red"> utrwalenie wiadomości</span> <br> Co robimy pod czas meczu? </a><input
+                     <li class="liLesson"><a href="./lekcji/lesson5Plus.html">5 - Plus - dia ambitnych <span class="red"> utrwalenie wiadomości</span> <br> Co robimy pod czas meczu? </a><input
                              type="checkbox" class="checkbox"></li>
                      <hr>
                  </ul>
