--- a/lekcji/lesson5Plus.html
+++ b/lekcji/lesson5Plus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson №5D</title>
+    <title>Lesson №5Plus</title>
     <link rel="stylesheet" href="../style.css">
 
 </head>
@@ -18,8 +18,8 @@
         </header>
         <main class="main">
             <h1>Krok po kroku - junior 1 <br> 5</h1>
-            <h2>D - Jak czesto grasz wpitke? </h2>
-            <h3>utrwalenie koniugacji czasowniki: umieć, chcieć, móc, musieć<br> Jak często to robisz?</h3>
+            <h2>Plus </h2>
+            <h3>utrwalenie wiadomości<br> Co robimy pod czas meczu?</h3>
             <!-- nowy słowa-->
             <a href="https://quizlet.com/pl/935432406/krok-po-kroku-junior-1-5c-flash-cards/?i=4wzil5&x=1jqt"
                 target="_blank">NOWY SŁOWA >>></a>
