--- a/index.html
+++ b/index.html
@@ -113,6 +113,28 @@
                              type="checkbox" class="checkbox"></li>
                      <hr>
                  </ul>
+                 <!-- 6 -->
+                 <h2>6</h2>
+                 <ul class="list">
+                     <li class="liLesson"><a href="./lekcji/lesson6A.html">6-A - Sklepik szkolny <span
+                                 class="red"> - ceny; z+narzędnik</span> <br>Ile to kosztuje? opis produktów</a><input type="checkbox"
+                             class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson5B.html">6-B - Co masz w plecaku? <span class="red">biernik I.poj.; czasowniki: mie, prosić sklepik szkolny: Czy jest....? Poproszę...</span>
+                                 </a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href=".//lekcji/lesson5C.html">6-C - Każdy jakies hobby ma <span class="red">  biernik I.poj. - cd.;  pytania: kogo? co? jaki? jakiego? jaka? jakie?</span> <br> 
+                        Co robisz? czat</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson5D.html">6-D - Kochany Święty Mikołaju! <span class="red">biernik - cd.</span> <br> list</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson5Powtorzenie.html">6 - Powtórzenie </a><input type="checkbox"
+                             class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson5Plus.html">6 - Plus - dia ambitnych <span class="red"> biernik - utrwalenie</span> <br> prezentacja polskich artystów i sportowców </a><input
+                             type="checkbox" class="checkbox"></li>
+                     <hr>
+                 </ul>
             </div>
         </main>
     </div>
