--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                  class="red"> - ceny; z+narzędnik</span> <br>Ile to kosztuje? opis produktów</a><input type="checkbox"
                              class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href="./lekcji/lesson5B.html">6-B - Co masz w plecaku? <span class="red">biernik I.poj.; czasowniki: mie, prosić sklepik szkolny: Czy jest....? Poproszę...</span>
+                     <li class="liLesson"><a href="./lekcji/lesson6B.html">6-B - Co masz w plecaku? <span class="red">biernik I.poj.; czasowniki: mie, prosić ; sklepik szkolny: Czy jest....? Poproszę...</span>
                                  </a><input type="checkbox" class="checkbox"></li>
                      <hr>
                      <li class="liLesson"><a href=".//lekcji/lesson5C.html">6-C - Każdy jakies hobby ma <span class="red">  biernik I.poj. - cd.;  pytania: kogo? co? jaki? jakiego? jaka? jakie?</span> <br> 
